syntax = "proto3";

option csharp_namespace = "TH.Grpc.Protos";

service CompanyProtoService{
	rpc GetPermissions(PermissionRequest) returns (PermissionReply);
}

// The request message containing the user's name.
message PermissionRequest {
  string name = 1;
}

// The response message containing the greetings.
message PermissionReply {
  string message = 1;
}

